Fix the scroll of messages on firefox. Fix #73

--- a/client/styles/sass/campaigns/_chatroom.scss
+++ b/client/styles/sass/campaigns/_chatroom.scss
@@ -65,3 +65,7 @@
     }
   }
 }
+
+panel-chatroom {
+  max-height: 100%;
+}
